# whisp

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
docs/: AGENT.md  AGORA_SETUP.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  HARDWARE.md  IMPLEMENTATION_PLAN.md  REBRAND_MIGRATION.md  VOICE_ASSISTANT.md
firmware/persephone_badge/: README.md  config.example.h  persephone_badge.ino
firmware/whisp_badge/: README.md  config.example.h  whisp_badge.ino
persephone_api/: __init__.py  _client.py  app.py  auth.py  config.py  database.py  schemas.py  storage.py  supabase_auth.py
persephone_api/routes/: __init__.py  admin.py  auth.py  badge.py  health.py  questions.py
public/: app.js  index.html  styles.css  voice.js  voice.test.mjs
supabase/migrations/: 001_initial_schema.sql  002_rebrand_persephone.sql  003_voice_assistant.sql
tests/: conftest.py  test_api.py  test_assistant_api.py  test_auth.py  test_contracts.py
whisp_api/: __init__.py  _client.py  app.py  auth.py  config.py  database.py  models.py  schemas.py  storage.py  supabase_auth.py  wav.py
whisp_api/routes/: admin.py  auth.py  badge.py  health.py  questions.py
worker/: .env.example  README.md  pyproject.toml  requirements-agora.txt  requirements-dev.txt  requirements.txt  run_worker.py
worker/persephone_worker/: __init__.py  agent_llm.py  agora_canary.py  assistant.py  audio.py  cluster_agent.py  clustering.py  config.py  queue.py  worker.py
worker/persephone_worker/chatbot/: __init__.py  base.py  providers.py
worker/persephone_worker/providers/: agora.py  agora_bridge.py  agora_captions.py  agora_token.py  base.py  faster_whisper.py  router.py
worker/scripts/: run_worker_agora.sh
worker/tests/: conftest.py  test_agora.py  test_agora_bridge.py  test_agora_captions.py  test_agora_token.py  test_assistant.py  test_audio.py  test_chatbot.py  test_cluster_agent.py  test_clustering.py  test_integration.py  test_queue.py  test_router.py  test_worker.py
worker/whisp_worker/: __init__.py  audio.py  clustering.py  config.py  queue.py  worker.py
worker/whisp_worker/providers/: __init__.py  agora.py  base.py  faster_whisper.py  router.py
